CodeJB/log/err.txt
Info in <TUnixSystem::ACLiC>: creating shared library /home/smjoblan/iTHEPHY/iTHEPHY/CodeJB/./data_cc.so
In file included from input_line_11:6:
././data.cc:173:149: error: use of undeclared identifier 'kTrue'
  RooAbsReal* nll_neg = model_neg->createNLL(*dataset1, Extended(), NumCPU(nThreads,2), RooFit::PrintLevel(-1), RooFit::PrintEvalErrors(-1), Offset(kTrue));
                                                                                                                                                    ^
././data.cc:176:149: error: use of undeclared identifier 'kTrue'
  RooAbsReal* nll_pos = model_pos->createNLL(*dataset2, Extended(), NumCPU(nThreads,2), RooFit::PrintLevel(-1), RooFit::PrintEvalErrors(-1), Offset(kTrue));
                                                                                                                                                    ^
Error in <ACLiC>: Dictionary generation failed!
